--- a/configs/main-config.json
+++ b/configs/main-config.json
@@ -1,5 +1,17 @@
 {
-    "localServer": "http://169.254.82.231:4444",
-    "remoteServer": "http://192.168.56.104:4444"
+    "servers": {
+        "local": " http://169.254.82.231:4444/wd/hub",
+        "remote": "http://192.168.56.104:4444/wd/hub"
+    },
+    "browsers": {
+        "chrome": {
+            "version": "latest"
+        },
+        "firefox": {
+            "version": "latest"
+        },
+        "edge": {
+            "version": "latest"
+        }
+    }
 }
-// testing
